<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hdt.proyecto.cpp.TestConsumo" >

    <TextView
        android:id="@+id/numConsultas"
        style="@style/textoConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numeroCons" />

    <TextView
        android:id="@+id/tiempoConsulta"
        style="@style/textoConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempoEj" />

    <TextView
        android:id="@+id/tiempoTotal"
        style="@style/textoConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempoTot" />

    <TextView
        android:id="@+id/totEje"
        style="@style/textoConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numEje" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:numColumns="2" >
    </GridView>

</LinearLayout>